2006-05-23  Roger While <simrw@sim-basis.de>

	* parser.y, scanner.l, field.c : Change 78 level processing

2006-05-20  Roger While <simrw@sim-basis.de>

	* warning.def, cobc.[ch] : Change CB_WARNING to CB_WARNDEF
		Just to simplify as we have an enumerator with this name
	* warning.def, cobc.c, typeck.c : Implement -Wtruncate
		Thanks to Hans-Martin Rasch for providing the meat of this code.
		This warns when a MOVE might cause truncation.
		The option is NOT turned on by -Wall
	* typeck.c : Fixes for extended ACCEPT/DISPLAY

2006-05-18  Roger While <simrw@sim-basis.de>

	* reserved.c, tree.c, codegen.c : Implement FUNCTION's EXCEPTION-FILE,
		EXCEPTION-STATEMENT, EXCEPTION-LOCATION and EXCEPTION-STATUS
	* codegen.c : Fixes for HP IA64 port

2006-05-13  Roger While <simrw@sim-basis.de>

	* parser.y : Allow slightly different DISPLAY syntax
	* warning.def, typeck.c : Warning option "call-params" to check
		that CALL parameters are 01 or 77
	* codegen.c : Fix a possible out-of-bounds reference discovered
		with valgrind

2006-05-12  Roger While <simrw@sim-basis.de>

	* typeck.c : Do not accept 66, 88 levels as USING params
	* parser.y, typeck.c : [NOT] EXCEPTION on ACCEPT/DISPLAY

2006-05-10  Roger While <simrw@sim-basis.de>

	* parser.y, typeck.c, codegen.c : Prelimary syntax support for
		CURSOR IS and CRT STATUS IS
	* reserved.c, tree.c, codegen.c : Implement STORED-CHAR-LENGTH (Fujitsu)

2006-05-09  Roger While <simrw@sim-basis.de>

	* parser.y, reserved.c, field.c : Implement BINARY-(CHAR/SHORT/LONG/DOUBLE)
		and the ACU synonyms (UN)SIGNED-(SHORT/INT/LONG)

2006-05-08  Roger While <simrw@sim-basis.de>

	* parser.y, tree.h, typeck.c : Implement TRAILING in INSPECT clause (ACU)

2006-05-06  Roger While <simrw@sim-basis.de>

	* reserved.c, parser.y,codegen.c : PROCEDURE DIVISION CHAINING

2006-05-04  Roger While <simrw@sim-basis.de>

	* codegen.c : Use likely/unlikely macros

2006-05-03  Roger While <simrw@sim-basis.de>
